Fix alert message text visibility in dark mode

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -2288,7 +2288,8 @@ h2 + .list-link-soup {
     @include sans-serif;
     font-size: 14px;
     text-align: center;
-    background-color: #ffe761;
+    background-color: $warning-bg;
+	color: $text;
 
     @include respond-min(768px) {
         position: fixed;
