--- a/djangoproject/scss/_utils.scss
+++ b/djangoproject/scss/_utils.scss
@@ -24,6 +24,7 @@ $green-dark: #0C4B33;
 $green-dark-text: #3C8866;
 $white: #F1FFF7;
 $white-dark: #F8F8F8;
+$warning-bg: #ffe761;
 $warning-yellow: #FFFDF1;
 $warning-dark-yellow: #F5F1C7;
 $warning-dark-yellow-d50: darken($warning-dark-yellow, 50);
